# json-rpc-client

./: .travis.yml  LICENSE  README.md  changelog.md  json-rpc-client.cabal
demo/: Client.hs  Server.hs  Signatures.hs
src/Network/JsonRpc/: Client.hs  Common.hs  Internal.hs  Server.hs  ServerAdapter.hs
tests/: All.hs  Properties.hs  Tests.hs
