name:                json-rpc-client
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Network, JSON
author:              Kristen Kozak
maintainer:          Kristen Kozak <grayjay@wordroute.com>
-- synopsis:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
-- description:

library
  exposed-modules:     Network.JsonRpc.Server
                       Network.JsonRpc.Client
                       Network.JsonRpc.Common
  other-modules:       Network.JsonRpc.Internal
  build-depends:       base,
                       bytestring,
                       aeson,
                       mtl,
                       unordered-containers,
                       vector,
                       scientific,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  hs-source-dirs:      tests
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       json-rpc-client,
                       json-rpc-server,
                       bytestring,
                       aeson,
                       mtl,
                       HUnit,
                       test-framework,
                       test-framework-hunit
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures
