name:                json-rpc-client
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Network, JSON
author:              Kristen Kozak
maintainer:          Kristen Kozak <grayjay@wordroute.com>
synopsis:            JSON-RPC 2.0 on the client side.
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
-- tested-with:
description:         An implementation of the client side of JSON-RPC 2.0.  See
                     <http://www.jsonrpc.org/specification>. This library supports
                     batch requests and notifications, as well as single method
                     calls.  It also provides a function for creating corresponding
                     server-side methods with the package
                     <http://hackage.haskell.org/package/json-rpc-server json-rpc-server>.
                     This library does not handle transport, so functions require a
                     server connection of type @Monad m => ByteString -> m (Maybe ByteString)@.
                     It currently only sends arguments to the server by-name.  See the
                     "Network.JsonRpc.Client" module for an example.

source-repository head
  type:              git
  location:          https://github.com/grayjay/json-rpc-client

library
  exposed-modules:     Network.JsonRpc.Client
                       Network.JsonRpc.ServerAdapter
  build-depends:       base >=4.3.1 && <4.8,
                       json-rpc-server >=0.1.4 && <0.2,
                       aeson >=0.7 && <0.9,
                       bytestring >=0.9.1.10 && <0.11,
                       mtl >=2.1.1 && <2.3,
                       text >=0.11.2 && <1.3,
                       unordered-containers >=0.2.3 && <0.3,
                       vector >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  hs-source-dirs:      tests
  main-is:             All.hs
  other-modules:       Tests, Properties
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.3.1 && <4.8,
                       json-rpc-client,
                       json-rpc-server >=0.1.4 && <0.2,
                       aeson >=0.7 && <0.9,
                       bytestring >=0.9.1.10 && <0.11,
                       mtl >=2.1.1 && <2.3,
                       text >=0.11.2 && <1.3,
                       HUnit >=1.2.4.2 && <1.3,
                       QuickCheck >=2.4.2 && <2.8,
                       test-framework >=0.6 && <0.9,
                       test-framework-hunit >=0.3 && <0.4,
                       test-framework-quickcheck2 >=0.3 && <0.4
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures -fno-warn-orphans
